--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-bot_token: 8572575850:AAFuIMVwHaC05BqCUFmvgPZtpf5diwcdjoY
+BOT_TOKEN: 8450041650:AAEBtPcpyDflXpMI8FLdL_C09bREpjfc4Xc
 download_folder: /home/danilo/telegram_bot/downloads/aaa
 delay: 1500
 zoom_speed: 0.001
